chore(ui/card): make usage code nocollapsible

--- a/packages/ui/src/components/card/Card.astro
+++ b/packages/ui/src/components/card/Card.astro
@@ -41,7 +41,7 @@
  *
  * @usage
  *
- * ```astro
+ * ```astro nocollapse
  * ---
  * import { Card, CardHeader, CardTitle, CardDescription, CardContent, CardFooter } from '@bejamas/ui/components/card';
  * ---
