--- a/apps/web/src/components/ThemeSwitcher.astro
+++ b/apps/web/src/components/ThemeSwitcher.astro
@@ -5,12 +5,17 @@ import {
   TabsTrigger,
   TabsIndicator,
 } from "@bejamas/ui/components/tabs";
+import { Skeleton } from "@bejamas/ui/components/skeleton";
 import { SunIcon, MoonIcon, LaptopIcon } from "@lucide/astro";
 import PresetSwitcher from "./PresetSwitcher.astro";
 import ThemeEditorGlobal from "./theme-editor/ThemeEditorGlobal.astro";
+import GitHubLink from "./GitHubLink.astro";
 ---
 
 <div class="flex items-center gap-2">
+  <GitHubLink server:defer>
+    <Skeleton class="h-9 w-16 rounded-lg" slot="fallback" />
+  </GitHubLink>
   <PresetSwitcher />
   <starlight-theme-select>
     <Tabs class="theme-tabs" id="theme-tabs">
